Working version of gmic filter